scale/route-modify.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  generation: 1
  name: route-10000
  namespace: default
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: http
    namespace: kgateway-system
  rules:
  - backendRefs:
    - group: gateway.kgateway.dev
      kind: Backend
      name: backend-10000
      weight: 1
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /anything/
          type: ReplacePrefixMatch
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add: 
          - name: hello
            value: kgateway
    matches:
    - path:
        type: PathPrefix
        value: /foo/10000
